tests/errors/init_state/move_and_drop/drop_consumes_like_move.sim

        fn f(x: i64) {
          y: i64;
          entry:
            drop x;
            y = copy x;
            return
        }
        